# ai-context-tool

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  NOTICE  PLAN.md  PLAN_AUDIT_PIVOT.md  PLAN_CONTRACT.md  PLAN_HEALTH.md  PLAN_METRICS.md  PLAN_RETRIEVAL.md  PROJECT_CONTEXT.md  PROJEC_CONTEXT.md  README.md  SONNET_PLAN.md  cram-menu.spec  cram_menu_entry.py  pyproject.toml  requirements.txt
.ai-context/: .gitignore  ARCHITECTURE.md  DECISIONS.md  GOTCHAS.md  SYMBOLS.md  TASK_HISTORY.jsonl  usage.jsonl
.ai-context/tasks/: implement-better-layout-for-cram-ai-tui.md  live-test-mcp-tools-and-check-next-pendi.md  task-history-tab-empty-cram-task-command.md  tui-history-tab-new-task-not-showing-up.md
.claude/: docs.yml  settings.json  settings.local.json
.claude/hooks/: cram_post_context.py  cram_session_start.py
.codex/: config.toml  hooks.json
.codex/hooks/: cram_session_start.py
.cram-ai-context/: .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  SYMBOLS.md  config.toml
.github/workflows/: publish.yml  test.yml
ai_context/: cli.py  find_context.py  hooks.py  init.py  sync_context.py  utils.py
assets/: cram-ai.icns  entitlements.plist
cram/: __main__.py  add_context.py  audit.py  audit_events.py  audit_findings.py  audit_report.py  audit_store.py  autostart.py  benchmark.py  cli.py  context_dir.py  cost_model.py  decide.py  decisions.py  doctor.py  find_context.py  gotcha.py  health.py  hooks.py  init.py  mcp_server.py  menubar.py  session.py  status.py  suggest.py  symbols.py  sync_context.py  targets.py  tray.py  tray_server.py  ui.py  usage.py  utils.py  vscode.py
cram/tray_ui/: popup.css  popup.html  popup.js
scripts/: build_macos_app.sh  generate_icns.py
tests/: conftest.py  legacy_audit_reference.py  test_audit.py  test_audit_drilldown.py  test_audit_findings.py  test_audit_measured.py  test_audit_parity.py  test_audit_report.py  test_audit_store.py  test_context_dir.py  test_cost_model.py  test_decisions.py  test_find_context.py  test_hooks.py  test_init.py  test_mcp_server.py  test_status.py  test_symbols.py  test_sync.py  test_targets.py  test_ui_smoke.py  test_usage.py  test_utils.py
