[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cram-ai"
version = "0.2.1"
description = "Stable context layer for AI coding tools — Haiku-generated, delivered via MCP to keep the prefix tiny"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "llm", "context", "token", "coding", "claude", "cursor", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
multi-provider = ["litellm>=1.40.0"]
tray = ["pystray>=0.19.0", "pillow>=10.0", "pywebview>=5.0", "flask>=3.0"]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0"]

[project.scripts]
cram = "cram.cli:main"
cram-menu = "cram.tray:main"
cram-autostart = "cram.autostart:main"

[project.urls]
Homepage = "https://github.com/vishbay/cram-ai"
Repository = "https://github.com/vishbay/cram-ai"
"Bug Tracker" = "https://github.com/vishbay/cram-ai/issues"

[tool.setuptools.packages.find]
include = ["cram*"]

[tool.setuptools.package-data]
cram = ["tray_ui/*"]
