[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cram-ai"
version = "0.3.0"
description = "Audit AI coding-agent sessions from real transcripts — see where tokens go (pre-edit context share, context bloat, retry loops) and get evidence-backed fixes"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Vish Bayavarapu", email = "vishbay19@gmail.com" }]
requires-python = ">=3.10"
keywords = ["ai", "llm", "context", "token", "coding", "claude", "cursor", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
multi-provider = ["litellm>=1.40.0"]
mcp = ["mcp>=1.0.0"]
tui = ["textual>=0.80"]
dev = ["pytest>=8.0"]

[project.scripts]
cram = "cram.cli:main"

[project.urls]
Homepage = "https://github.com/vishbay/cram-ai"
Repository = "https://github.com/vishbay/cram-ai"
"Bug Tracker" = "https://github.com/vishbay/cram-ai/issues"

[tool.setuptools.packages.find]
include = ["cram*"]
